# orchestrator-kafka-proxy

./: .dockerignore  .gitignore  README.md  config-sample.json  orchestrator_kafka_proxy.py  pyproject.toml  requirements.txt
app/: __init__.py  kafka_interface.py  ranking_processor.py  ranking_service.py
app/lib/: utils.py
docker/: Dockerfile  docker-compose.yml  start.sh
jenkins/: docker.Jenkinsfile
testing/: populate_kafka.py
